After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 642681 - gtk_combo_box_text_get_active_text doesn't work as stated
gtk_combo_box_text_get_active_text doesn't work as stated
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkComboBox
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-02-18 15:17 UTC by Allin Cottrell
Modified: 2011-02-19 18:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
adds code to access combo box's entry, if present (693 bytes, patch)
2011-02-18 15:17 UTC, Allin Cottrell
none Details | Review
testcase (1.31 KB, text/plain)
2011-02-19 16:33 UTC, Allin Cottrell
  Details

Description Allin Cottrell 2011-02-18 15:17:27 UTC
Created attachment 181219 [details] [review]
adds code to access combo box's entry, if present

The doc for gtk_combo_box_text_get_active_text states that
if the combo_box "contains an entry, this function will 
return its contents (which will not necessarily be an item 
from the list)." But it doesn't. The attached patch
should fix this.
Comment 1 Allin Cottrell 2011-02-19 16:33:29 UTC
Created attachment 181328 [details]
testcase
Comment 2 Allin Cottrell 2011-02-19 16:37:57 UTC
I attached a minimal test case.

Select one of the drop-down strings from the combo
box and click "Show active text on stderr": fine.

Type something into the entry and click "Show active 
text on stderr": you get NULL.